<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2898FA"
    android:orientation="vertical"
    android:padding="5dp" >

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/currency_examplecaption" />

    <TextView
        android:id="@+id/edCurrExampleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/currency_example_data"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_name" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
         android:orientation="horizontal">

        <ImageView
            android:id="@+id/edCurrFlagIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currency_flag"
            android:padding="3dp"
            android:src="@drawable/flag_aa" >

        </ImageView>
        <EditText
            android:id="@+id/edCurrNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
         android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_shortname"/>
	<EditText
	    android:id="@+id/edCurrShortNameET"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:inputType="text"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/showShortNameCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/currency_showshortname" />

    <CheckBox
        android:id="@+id/shortNameBeforeCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/currency_shortnamebefore" />

    <CheckBox
        android:id="@+id/shortNameSpaceCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/currency_shortnamespace" />

    <CheckBox
        android:id="@+id/DelimiterCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/currency_delimiter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/currency_iso" />
	<EditText
	    android:id="@+id/edCurrISOET"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:maxLength="3" 
	    android:inputType="textCapCharacters"/>
	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/currency_numiso" />

	<EditText
	    android:id="@+id/edCurrNumISOET"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:maxLength="3" />
    
	</LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/currency_decimal" />
<TextView
    	android:id="@+id/edCurrDecimalTV"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:textAppearance="?android:attr/textAppearanceMedium"/>
<SeekBar
    android:id="@+id/edCurrDecimalSB"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:max="4"
    android:progress="2" />

	</LinearLayout>


<CheckBox
    android:id="@+id/edCurrDefaultCB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/currency_default" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/edCurrFlag1IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/currency_flag"
        android:paddingLeft="2dp"
        android:src="@drawable/flag_aa" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/currency_flag"
        android:src="@drawable/obmen" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/currency_flag"
        android:src="@drawable/flag_aa" />

    <Button
        android:id="@+id/edCurrRateBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="edCurrRateBTClick"
        android:text="@string/currency_rate_button" />

</LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>

